--- a/style.css
+++ b/style.css
@@ -73,3 +73,29 @@ a {
   font-family: 'Montserrat', sans-serif;
   font-size: 13px;
 }
+
+#sidebar {
+  position: fixed;
+  width: 100px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #f7e3cf;
+}
+
+#sidebar ul {
+  display: inline-block;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  padding-left: 10px;
+  text-align: center;
+}
+
+#page-content {
+  margin-left: 300px;
+}
+
+.smaller {
+  width: 75px;
+  height: 75px;
+}
