--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ background: linear-gradient(45deg, rgba(247,118,86,1) 0%, rgba(0,96,242,1)100%);
   color: white;
   font-size: 16px;
   line-height: 1.6;
-  /*border: 10px solid white;*/
   margin: 0;
 }
 
@@ -158,4 +157,14 @@ h1, h3 {
   background-color: #ffb2be;
 }
 
+/*footer style*/
+.footer {
+  padding: 30px;
+  text-align: center;
+}
 
+.contact-links a {
+  color: black;
+  font-size: 40px;
+  padding: 20px;
+}
